<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="title_home">Ratatouille online</string>
    <string name="description_home">Mangez les meilleurs plats de la région</string>
    <string name="str_btn_plats">Plats</string>
    <string name="str_btn_desserts">Desserts</string>
    <string name="str_btn_entrees">Entrees</string>
    <string name="ctx_desc_menu_img">Ratatouille picture</string>

    <string-array name="liste_entrees">
        <item>Filets de saumon</item>
        <item>Salade avocats</item>
        <item>Croquettes pour chat</item>
        <item>Salade caesar</item>
        <item>Chèvre chaud</item>
    </string-array>
    <string-array name="liste_plats">
        <item>Langouste</item>
        <item>Pizza</item>
        <item>Soupe de poisson</item>
        <item>Cabillaud</item>
    </string-array>
    <string-array name="liste_desserts">
        <item>Mousse au chocolat</item>
        <item>Crème au caramel</item>
        <item>Eclair au chocolat</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_logged_in"></string>
    <string name="mesInfos">Mes informations</string>
    <string name="id_label">votre id :</string>
    <string name="deconnexion">Me déconnecter</string>
</resources>